--- a/styles/sounds.css
+++ b/styles/sounds.css
@@ -6,13 +6,18 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 32px;
+
+  width: 100%;
+  max-width: 1200px;
 }
 
 .sounds button {
   width: 100%;
-  padding: 20px;
+  height: 80px;
+  padding: 0px 20px;
   border-radius: 10px;
   background-color: rgba(138, 0, 19, 0.4);
+  text-transform: uppercase;
 
   display: flex;
   align-items: center;
